# cs236-projects

./: AutomataAll.h  Automaton.h  AutomatonAdd.h  AutomatonColon.h  AutomatonColonDash.h  AutomatonComma.h  AutomatonComment.h  AutomatonFacts.h  AutomatonID.h  AutomatonLeftParen.h  AutomatonMultiply.h  AutomatonPeriod.h  AutomatonQMark.h  AutomatonQueries.h  AutomatonRightParen.h  AutomatonRules.h  AutomatonSchemes.h  AutomatonSingleChar.h  AutomatonString.h  AutomatonUndefined.h  CMakeLists.txt  Parser.cpp  Parser.h  ProgramData.h  Token.cpp  Token.h  TokenType.cpp  TokenType.h  Tokenizer.cpp  Tokenizer.h  main.cpp
